--- a/package.json
+++ b/package.json
@@ -26,10 +26,10 @@
     "ejs": "^3.0.1",
     "express": "^4.17.1",
     "express-sanitizer": "^1.0.5",
+    "hpp": "^0.2.3",
     "jsdoc": "^3.6.3",
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.15",
-    "method-override": "^3.0.0",
     "mysql": "^2.18.1",
     "nodemailer": "^6.4.4"
   }
